service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: exam
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
