ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: exam
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: backend.local     # Remplacez par votre nom de domaine
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service  # Nom de votre service
            port:
              number: 8080          # Port du service
